<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ArtistDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="408dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:hint="@string/album_lbl_imagenArt"
                    tools:srcCompat="@tools:sample/avatars" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/nameArtist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblcreateArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/FechaNacimiento"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/createArtist"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:hint="@string/album_lbl_dateArt"
                android:padding="16dp"
                android:text=""
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/AlbumsArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#40404010"
            android:hint="@string/AlbumsAsociados"
            android:padding="16dp"
            android:text="@string/AlbumsAsociados"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listaAlbumes"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scrollbarAlwaysDrawVerticalTrack="true" />

        <TextView
            android:id="@+id/PreziesArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#40404010"
            android:hint="@string/PremiosAsociados"
            android:padding="16dp"
            android:text="@string/PremiosAsociados"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listaPrize"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scrollbarAlwaysDrawVerticalTrack="true" />



    </LinearLayout>

</FrameLayout>